--- a/src/Controls/samples/Controls.Sample/Resources/Raw/HybridSamplePage/index.html
+++ b/src/Controls/samples/Controls.Sample/Resources/Raw/HybridSamplePage/index.html
@@ -9,10 +9,20 @@
     <script>
         window.addEventListener(
             "HybridWebViewMessageReceived",
-            function (e) {
+            function(e) {
                 var messageFromCSharp = document.getElementById("messageFromCSharp");
                 messageFromCSharp.value += '\r\n' + e.detail.message;
             });
+
+        function AddNumbers(a, b) {
+            var result = {
+                "result": a + b,
+                "operationName": "Addition"
+            };
+            return result;                
+        }
+
+        var count = 0;
     </script>
 </head>
 <body>
@@ -20,7 +30,7 @@
         Hybrid sample!
     </div>
     <div>
-        <button onclick="window.HybridWebView.SendRawMessage('Message from JS!')">Send message to C#</button>
+        <button onclick="window.HybridWebView.SendRawMessage('Message from JS! ' + (count++))">Send message to C#</button>
     </div>
     <div>
         Message from C#: <textarea readonly id="messageFromCSharp" style="width: 80%; height: 10em;"></textarea>
