--- a/src/Controls/samples/Controls.Sample/Resources/Raw/HybridSamplePage/index.html
+++ b/src/Controls/samples/Controls.Sample/Resources/Raw/HybridSamplePage/index.html
@@ -49,6 +49,12 @@
         <button onclick="window.HybridWebView.SendRawMessage('Message from JS! ' + (count++))">Send message to C#</button>
     </div>
     <div>
+        <button onclick="window.HybridWebView.InvokeDotNet('DoSyncWork')">Call C# sync method (no params)</button>
+        <button onclick="window.HybridWebView.InvokeDotNet('DoSyncWorkParams', [123, 'hello'])">Call C# sync method (params)</button>
+        <button onclick="window.HybridWebView.InvokeDotNet('DoWorkAsync')">Call C# async method (no params)</button>
+        <button onclick="window.HybridWebView.InvokeDotNet('DoWorkParamsAsync', [123, 'hello'])">Call C# async method (params)</button>
+    </div>
+    <div>
         Message from C#: <textarea readonly id="messageFromCSharp" style="width: 80%; height: 10em;"></textarea>
     </div>
     <div>
